Use the same Assembly infos, fix the menu hinting in WPF controls

--- a/ControlWPF4/AutomaticUpdaterWPF4.csproj
+++ b/ControlWPF4/AutomaticUpdaterWPF4.csproj
@@ -118,18 +118,14 @@
     <Compile Include="..\Control\UpdateType.cs">
       <Link>UpdateType.cs</Link>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs">
+    <Compile Include="..\Control\Properties\AssemblyInfo.cs">
+      <Link>Properties\AssemblyInfo.cs</Link>
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="..\Control\frmChanges.resx">
       <Link>frmChanges.resx</Link>
@@ -144,10 +140,6 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="au.signkey.snk" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
