--- a/ControlWPF/AutomaticUpdaterWPF.csproj
+++ b/ControlWPF/AutomaticUpdaterWPF.csproj
@@ -56,6 +56,9 @@
     <Compile Include="..\Control\Args.cs">
       <Link>Args.cs</Link>
     </Compile>
+    <Compile Include="..\Control\AutomaticUpdaterBackend.cs">
+      <Link>AutomaticUpdaterBackend.cs</Link>
+    </Compile>
     <Compile Include="..\Control\AutoUpdaterInfo.cs">
       <Link>AutoUpdaterInfo.cs</Link>
     </Compile>
