--- a/Control/AutomaticUpdater.csproj
+++ b/Control/AutomaticUpdater.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <EmbeddedResource Include="frmChanges.resx">
       <DependentUpon>frmChanges.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmError.resx">
       <DependentUpon>frmError.cs</DependentUpon>
