- The error & changes dialog boxes now use a multi-line label for the title. Now the title wraps with the dialog resize.   - Don't show the extended error information textbox if there is no extended error info.

--- a/Control/AutomaticUpdater.csproj
+++ b/Control/AutomaticUpdater.csproj
@@ -84,6 +84,9 @@
     </Compile>
     <Compile Include="GUIDEditor.cs" />
     <Compile Include="MenuType.cs" />
+    <Compile Include="MLLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="PipeClient.cs" />
     <Compile Include="AutomaticUpdater.cs">
       <SubType>Component</SubType>
