--- a/Control4/AutomaticUpdater4.csproj
+++ b/Control4/AutomaticUpdater4.csproj
@@ -89,6 +89,7 @@
     </Compile>
     <Compile Include="..\Control\MLLabel.cs">
       <Link>MLLabel.cs</Link>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="..\Control\PipeClient.cs">
       <Link>PipeClient.cs</Link>
